[gd_scene load_steps=5 format=3 uid="uid://cvv723es1bjeh"]

[ext_resource type="Script" uid="uid://dctw6tqsicglt" path="res://RhythmTest2/inputHandler.gd" id="1_v355i"]
[ext_resource type="PackedScene" uid="uid://dvsacbsmhn3je" path="res://RhythmTest2/level_editor.tscn" id="2_furh8"]
[ext_resource type="Script" uid="uid://crgkssx77rmyh" path="res://RhythmTest2/song_timer.gd" id="3_vwrcl"]
[ext_resource type="AudioStream" uid="uid://bnda4u62bwjtc" path="res://RhythmTest2/McDInThePentagon_short.mp3" id="4_jy863"]

[node name="level01" type="Node2D"]
script = ExtResource("1_v355i")

[node name="LevelEditor" parent="." instance=ExtResource("2_furh8")]

[node name="SongLength" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
script = ExtResource("3_vwrcl")

[node name="Song" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jy863")
volume_db = -14.41

[connection signal="timeout" from="SongLength" to="." method="_on_song_length_timeout"]
